codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_status_with_unavailable_account.snap
---
source: tui/src/chatwidget/tests/accounts.rs
expression: rendered
---
ChatGPT account status
  pro@example.com — Pro · active
    Primary: 25% used / 300m window
    Secondary: 60% used / 10080m window
  free@example.com — Free
    unavailable: catalog unavailable
