codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_usage_daily_calendar_bucket.snap
---
source: tui/src/chatwidget/tests/accounts.rs
expression: rendered
---
ChatGPT account usage · daily
  pro@example.com — 15 tokens
