codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_grouped_viewed_images.snap
---
source: tui/src/chatwidget/tests/tool_flow.rs
expression: active_blob(&chat)
---
• Viewed Images
  └ first.png
    second.png
