codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_grouped_web_search.snap
---
source: tui/src/chatwidget/tests/tool_flow.rs
expression: active_blob(&chat)
---
• Searching the web
  └ Search rust ratatui wrapping
